--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   google_fonts: ^6.1.0
   hms_room_kit: ^1.0.5
   http: ^1.0.0
-  intl: 0.18.1
+  intl: ^0.18.1
   json_path: 0.6.2
   page_transition: 2.0.4
   path_provider: ^2.0.15
@@ -58,6 +58,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+  share_plus: ^7.2.2
+  video_player: ^2.8.3
 
 dev_dependencies:
   flutter_lints: 3.0.0
