--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -9,6 +9,11 @@
 
     <uses-permission android:name="android.permission.CAMERA"/>
     <uses-permission android:name="android.permission.BLUETOOTH" />
+
+      <!-- This is required if the application uses foreground service for android 14 and above-->
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_CAMERA"/>
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_MICROPHONE" />
+  <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <application
         android:label="protoype"
         tools:replace="android:label"
@@ -54,6 +59,10 @@
             </intent-filter>
 
         </activity>
+
+         <service android:name="com.pravera.flutter_foreground_task.service.ForegroundService"
+          android:foregroundServiceType="camera|microphone"
+          android:stopWithTask="true" />
 
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
