--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,9 @@ dependencies:
   cupertino_icons: ^1.0.0
   share_plus: ^7.2.2
   video_player: ^2.8.3
+  appinio_video_player: ^1.2.2
+  proximity_screen_lock: ^1.1.0
+  flutter_foreground_task: ^6.1.3
 
 dev_dependencies:
   flutter_lints: 3.0.0
